--- a/core/templates/layouts/base-fullscreen.html
+++ b/core/templates/layouts/base-fullscreen.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://appseed.us/adminlte"/>
 
   <title>
-    Django AdminLTE - {% block title %}{% endblock %} | AppSeed
+    EZDealer - {% block title %}{% endblock %} | Dealer Management System
   </title> 
 
   <!-- Specific Page CSS goes HERE  -->  
