--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://appseed.us/adminlte"/>
 
   <title>
-    Django AdminLTE - {% block title %}{% endblock %} | AppSeed
+    EZDealer - {% block title %}{% endblock %} | Automotive Dealer Management System
   </title> 
 
   {% block stylesheets %}{% endblock stylesheets %}
@@ -25,7 +25,7 @@
     {% include 'includes/footer.html' %}
 
     <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
+    <aside class="control-sidebar control-sidebar-light">
         <!-- Control sidebar content goes here -->
     </aside>
     <!-- /.control-sidebar -->
